--- a/index.html
+++ b/index.html
@@ -11,72 +11,28 @@
 
 <body>
     <div class="logo h t">
-        <img src="./img/splash_logo.png" alt="" srcset="" class="q_logo">
-        <img src="./img/splash_logo.png" alt="" srcset="" class="q_logo">
+        <div>
+            <img src="./img/splash_logo.png" alt="" srcset="" class="q_logo">
+        </div>
+        <div>
+            <h1>Option symposium</h1>
+        </div>
     </div>
     <div class="logo v r">
         <ul>
-            <li>0</li>
-            <li>p</li>
-            <li>t</li>
-            <li>i</li>
-            <li>o</li>
-            <li>n</li>
-        </ul>
-        <ul>
-            <li>s</li>
-            <li>y</li>
-            <li>m</li>
-            <li>p</li>
-            <li>o</li>
-            <li>s</li>
-            <li>i</li>
-            <li>u</li>
-            <li>m</li>
+            <li><img src="./img/3.png" alt="" srcset=""></li>
+            <li><img src="./img/1.png" alt="" srcset=""></li>
+            <li><img src="./img/2.png" alt="" srcset=""></li>
         </ul>
     </div>
     <div class="logo v l">
         <ul>
-            <li>0</li>
-            <li>p</li>
-            <li>t</li>
-            <li>i</li>
-            <li>o</li>
-            <li>n</li>
-        </ul>
-        <ul>
-            <li>s</li>
-            <li>y</li>
-            <li>m</li>
-            <li>p</li>
-            <li>o</li>
-            <li>s</li>
-            <li>i</li>
-            <li>u</li>
-            <li>m</li>
+            <li> <img src="./img/6.png" alt="" srcset=""></li>
+            <li><img src="./img/4.png" alt="" srcset=""></li>
+            <li><img src="./img/5.png" alt="" srcset=""></li>
         </ul>
     </div>
-    <div class="logo h b">
-        <div class="aso">
-            <img src="./img/1.png" alt="" srcset="">
-        </div>
-        <div class="aso">
-            <img src="./img/2.png" alt="" srcset="">
-        </div>
-        <div class="aso">
-            <img src="./img/3.png" alt="" srcset="">
-        </div>
-        <div class="aso">
-            <img src="./img/4.png" alt="" srcset="">
-        </div>
-        <div class="aso">
-            <img src="./img/5.png" alt="" srcset="">
-        </div>
-        <div class="aso">
-            <img src="./img/6.png" alt="" srcset="">
-        </div>
-    </div>
-    <div>
+    <main>
 
 
 
@@ -84,15 +40,13 @@
         <!-- change the iframe -->
 
 
-        <iframe src="https://docs.google.com/presentation/d/e/2PACX-1vRCX70pMs1zX2jQMot_GXd1lp8Z7xW44B0Eg-fw244sFU-T7br0b15DpKIO5otrj-1Tx-RPlBUDeJ_y/embed?start=false&loop=false&delayms=3000" frameborder="0" width="100%" height="100%"></iframe>
-
-
+        <iframe src="https://docs.google.com/presentation/d/e/2PACX-1vSwc1REP-JY54OhQ1nNSQT4cqtwTqQBpnGpIcWdMYJoGETT7k6UBjQVgD1sajrqLz4qD0tJwICzRE01/embed?start=false&loop=false&delayms=3000" frameborder="0" width="100%" height="100%"></iframe>
         <!-- change only this -->
 
 
 
 
-    </div>
+    </main>
 </body>
 
 </html>
