--- a/day_2/1_Srikhant_Iyengar.html
+++ b/day_2/1_Srikhant_Iyengar.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title>1_Srikhant_Iyengar</title>
     <link rel="stylesheet" href="styles.css">
 
 </head>
@@ -41,7 +41,7 @@
         <!-- change the iframe -->
 
 
-        <iframe src="https://docs.google.com/presentation/d/e/2PACX-1vSFVbVtzc5Kkw7XTu7UfqOz9lv1fLmRYA863KsBZWNV29tJ9CENVGCs28aE7uM0zidmxhuiAm5Bfwbo/embed?start=false&loop=false&delayms=3000" frameborder="0" width="100%" height="100%"></iframe>
+        <iframe src="https://docs.google.com/presentation/d/e/2PACX-1vSZfGAMDdpWOAWVB3y10m6crINMx2XiorKG0mkWt29FRQHLII7HpaXv__2ycvfpz0djfgnzIFo8zNms/embed?start=false&loop=false&delayms=3000" frameborder="0" width="100%" height="100%"></iframe>
         <!-- change only this -->
 
 
