--- a/day_1/3_panel.html
+++ b/day_1/3_panel.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title>3_panel</title>
     <link rel="stylesheet" href="styles.css">
 
 </head>
@@ -41,7 +41,7 @@
         <!-- change the iframe -->
 
 
-        <iframe src="https://docs.google.com/presentation/d/e/2PACX-1vROEqTEuv9_EWM0Isc5WZ43J7eDjy6c3r_X5eC-hk8WMArz1aCxAAcy2z5VtsHUMS78bFm1grjDkTcP/embed?start=false&loop=false&delayms=3000" frameborder="0" width="100%" height="100%" ></iframe>
+        <iframe src="https://docs.google.com/presentation/d/e/2PACX-1vSFVbVtzc5Kkw7XTu7UfqOz9lv1fLmRYA863KsBZWNV29tJ9CENVGCs28aE7uM0zidmxhuiAm5Bfwbo/embed?start=false&loop=false&delayms=3000" frameborder="0" width="100%" height="100%"></iframe>
         <!-- change only this -->
 
 
