--- a/day_1/6_Anil_Singhvi.html
+++ b/day_1/6_Anil_Singhvi.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title>6_Anil_Singhvi</title>
     <link rel="stylesheet" href="styles.css">
 
 </head>
@@ -41,7 +41,7 @@
         <!-- change the iframe -->
 
 
-        <iframe src="https://docs.google.com/presentation/d/e/2PACX-1vQim-pSuubDLUdUIan_kHGjrnZx0kQG8_sPHYMs015s-EXYaoMo3L55E-qu48IAKP4XlS9vvX8nC0jR/embed?start=false&loop=false&delayms=3000" frameborder="0" width="100%" height="100%"></iframe>
+        <iframe src="https://docs.google.com/presentation/d/e/2PACX-1vSFGgrKYMBBJkinFdzdMhB1w9UI8b22dsf_oaf2PCgdhkewt0EKtRgtbuXIFeURSrfJujgKwSOhl6sr/embed?start=false&loop=false&delayms=3000" frameborder="0" width="100%" height="100%"></iframe>
         <!-- change only this -->
 
 
