--- a/day_2/2_Sushil_Kedia.html
+++ b/day_2/2_Sushil_Kedia.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title>2_Sushil_Kedia</title>
     <link rel="stylesheet" href="styles.css">
 
 </head>
@@ -41,7 +41,7 @@
         <!-- change the iframe -->
 
 
-        <iframe src="https://docs.google.com/presentation/d/e/2PACX-1vTcNHok5_wbqbNF2lTjN7UPIUJiYyljCbUDVdabylY9PxNigEk14cVazYgbhyHXHLZws5T7jEUxcjFc/embed?start=false&loop=false&delayms=3000" frameborder="0" width="100%" height="100%"></iframe>
+        <iframe src="https://docs.google.com/presentation/d/e/2PACX-1vT8IFBKvnde7SJI5cNSzm4d7T7tsBsXkKnM3wPWHe0E2yBZ3bHpVPPyT55FBiBjhKhisMRQ6vz90GGX/embed?start=false&loop=false&delayms=3000" frameborder="0" width="100%" height="100%"></iframe>
         <!-- change only this -->
 
 
