--- a/day_2/5_panel.html
+++ b/day_2/5_panel.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title>5_panel</title>
     <link rel="stylesheet" href="styles.css">
 
 </head>
@@ -41,7 +41,7 @@
         <!-- change the iframe -->
 
 
-        <iframe src="https://docs.google.com/presentation/d/e/2PACX-1vSFGgrKYMBBJkinFdzdMhB1w9UI8b22dsf_oaf2PCgdhkewt0EKtRgtbuXIFeURSrfJujgKwSOhl6sr/embed?start=false&loop=false&delayms=3000" frameborder="0" width="100%" height="100%"></iframe>
+        <iframe src="https://docs.google.com/presentation/d/e/2PACX-1vSZ7lA5sXUzBH5jIwnEiK-GHtuNtzw5ChoAu2D3WQaUp-Kifpr43NxOktDzVNBRHESbu6oYykpuKyDY/embed?start=false&loop=false&delayms=3000" frameborder="0" width="100%" height="100%" ></iframe>
         <!-- change only this -->
 
 
