--- a/day_2/6_Bhavin_Desai.html
+++ b/day_2/6_Bhavin_Desai.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title>6_Bhavin_Desai</title>
     <link rel="stylesheet" href="styles.css">
 
 </head>
@@ -40,8 +40,7 @@
 
         <!-- change the iframe -->
 
-
-        <iframe src="https://docs.google.com/presentation/d/e/2PACX-1vQbNpIfizNN5Xa7WI6REMBvs2KFRV855G7DX-PXGMju07tNz2310RIwYkhkP49WWJZsC-OPSHjaquil/embed?start=false&loop=false&delayms=3000" frameborder="0" width="100%" height="100%"></iframe>
+        <iframe src="https://docs.google.com/presentation/d/e/2PACX-1vSDwrMKUjOqKhaqy3WZyXAfcsFQ26k44Dv87I4tz0fTs5q3eX3KO4veVXh-QI6Up-jjOlOQTOl3qc0O/embed?start=false&loop=false&delayms=3000" frameborder="0" width="100%" height="100%"></iframe>
         <!-- change only this -->
 
 
