--- a/day_2/7_Santosh_Pasi.html
+++ b/day_2/7_Santosh_Pasi.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title>7_Santosh_Pasi</title>
     <link rel="stylesheet" href="styles.css">
 
 </head>
@@ -41,7 +41,7 @@
         <!-- change the iframe -->
 
 
-        <iframe src="https://docs.google.com/presentation/d/e/2PACX-1vS1SXGF1c2ed_yTObV8TelsDrbby0BxmHWAlCsyseL7Mi3_uJ9h1SO_7FR7wKAgiLpsRssOm-uBgold/embed?start=false&loop=false&delayms=3000" frameborder="0" width="100%" height="100%" ></iframe>
+        <iframe src="https://docs.google.com/presentation/d/e/2PACX-1vQbNpIfizNN5Xa7WI6REMBvs2KFRV855G7DX-PXGMju07tNz2310RIwYkhkP49WWJZsC-OPSHjaquil/embed?start=false&loop=false&delayms=3000" frameborder="0" width="100%" height="100%"></iframe>
         <!-- change only this -->
 
 
